[package]
name = "pandreap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11.0"
colored = "2.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
chrono = "0.4.19"
path-absolutize = "3.0.13"
lazy_static = "1.4.0"