[package]
name = "pandreap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
colored = "2.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
chrono = "0.4.19"
path-absolutize = "3.0.13"
base64 = "0.13.0"
itertools = "0.10.3"
ctrlc = "3.2.1"
clap = "3.1.6"
lazy_static = "1.4.0"