[package]
name = "reapand"
version = "1.2.0"
edition = "2021"
authors = ["Raphael Dray <dray.raph@gmail.com>"]
categories = ["command-line-utilities", "encoding"]
description = "Create files by decoding client input from specified encodings"
readme = "README.md"
repository = "https://github.com/Panda-Organization/reapand"
license = "Apache-2.0"
keywords = ["cli", "lfi", "php-filters", "decoding", "zlib", "bzip2", "base64"]
exclude = ["/ci", "/images", ".*"]

[dependencies]
rouille = "3.5.0"
colored = "2.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
chrono = "0.4.19"
path-absolutize = "3.0.13"
base64 = "0.13.0"
itertools = "0.10.3"
ctrlc = "3.2.1"
clap = "3.1.6"
lazy_static = "1.4.0"
flate2 = "1.0.24"
bzip2 = "0.4.3"